# actgpt

./: README.org  pyproject.toml  requirements.txt
gutenberg_transformer/: hyperparameters.py  paths.py  preprocessing.py  strip_headers.py  train_tokenizer.py  transformer.ipynb  transformer.py
gutenberg_transformer/data/: test.txt  tokenizer-goethe_schiller_raimund.json  val.txt
