[tool.poetry]
name = "gutenberg-transformer"
version = "0.1.0"
description = "hi "
authors = ["Jakob Hauser <jakob.e.hauser@protonmail.com>"]
readme = "README.org"
packages = [{include = "gutenberg_transformer"}]

[tool.poetry.dependencies]
python = "^3.9"
pyright = "^1.1.267"
jupyterlab = "^3.6.1"
torch = "^1.13.1"
polars = "^0.16.4"
tokenizers = "^0.13.2"
numpy = "^1.24.2"
tqdm = "^4.64.1"
ipywidgets = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
